fix: Change page header width setting
This fixes the behaviour of the last item on navigation bar not showing properly.

Deleted redundant comment.

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -13,12 +13,6 @@ Primary Color: #013065;
 Secondary Color: #9B6600;
 */
 
-/* TODO: ask tutor why this did not work*/
-$primary-font-family: "Roboto", Arial;
-$primary-font-weight: 400;
-$secondary-font-weight: 700;
-
-
 *{
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -119,7 +113,7 @@ button:focus,
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 100%;
+    width: auto;
     height: auto;
     padding: 20px;
     border-bottom:1px solid grey;
